# cvstage

./: CMakeLists.txt  README.md  package.xml
include/cvstage/: cvstage.h
include/cvstage/plugins/: draw_costmap.h  draw_ellipses.h  draw_laserscan.h  draw_xy_lines.h  reproject_image.h
src/: test_cvstage.cpp
test/: CMakeLists.txt  gtest_cvstage.cpp  gtest_ellipse_utils.cpp  gtest_mini_stage.cpp
